# count

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  README.md  print_version.cmake
.github/workflows/: cmake-multi-platform.yml
cmake/: FindCheck.cmake
include/: count.h
man/: count.1  count.1.html  count.1.ronn  count.3  count.3.html  count.3.ronn
src/: count.c  main.c
tests/: CMakeLists.txt  check_count  lib_test.c
